AP-20406: Adds support for new workflow format to `Workflowalizer`
AP-20406 (WorkflowMetaData API (near WorkflowDef))